# famjamx

./: CMakeLists.txt  README.md  genlevels.sh
assets/: mapspal.ase
src/: assets.h  fgjx.cpp  fgjx.h  main.cpp
src/core/: constants.h  levels.cpp  levels.h  scene.cpp  scene.h
src/screens/: endscreen.cpp  endscreen.h  gameplayscreen.cpp  gameplayscreen.h  menu.cpp  menu.h
util/: mapgen.cpp
